--- a/src/components/Portada/Portada.css
+++ b/src/components/Portada/Portada.css
@@ -13,8 +13,9 @@
 .portada h2 {
   color: white ;
   font-size: 40px;
+  font-weight: 200;
   font-family: Arial, Helvetica, sans-serif;
-  font-weight: 100;
-  text-align: center;
-  align-items: center;
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 120px;
 }
