--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -16,7 +16,8 @@
 
 .card-producto {
   width: 250px;
-  height: 390px;
+  height: 100%;
+  padding-bottom: 6px;
   border-radius: 10px;
   background-color: #C5D2DB;
 
@@ -44,15 +45,13 @@
 }
 .talla {
   width: 127px;
-  height: 20px;
   padding-left: 5px;
   margin-left: 20px;
   margin-right: 10px;
 }
 .carrito {
   background-color: #0D50B1;
-  width: 50px;
-  height: 25px;
+
   transition: all 0.5s ease;
   cursor: pointer;
   margin: 0 auto;
